fix(recipes)disable scroll when modal is openend, fix z-index issue on mobile

--- a/app/scss/imports/_modal.scss
+++ b/app/scss/imports/_modal.scss
@@ -10,7 +10,7 @@
   height: 100vh;
   width: 100vw;
   background-color: #FFF9EF;
-  z-index: 2;
+  z-index: 9999;
   &__title {
     text-align: center;
     margin-top: 40px;
